--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="bg-blue-400 h-[100vh]">
     <!-- Background -->
     <img
-      src="https://th.bing.com/th/id/R.069cf185a7daba4caceb8e10e84da46b?rik=H6UDZfO%2b56isFg&riu=http%3a%2f%2fwww.pixelstalk.net%2fwp-content%2fuploads%2f2016%2f07%2fDownload-Free-Weather-Background.jpg&ehk=JNt8y9ofXKAnT7OCpITBYQSnexCUjI9Hmcb24SZmQrs%3d&risl=&pid=ImgRaw&r=0"
+      src="weatherpic.jpeg"
       alt="Weather Background"
       class="fixed h-full w-full object-cover opacity-50"
     />
