Fixed image path issue

--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
 
         </div>
       </div>
-    </div>
+    </div>git add .
+git commit -m "Updated image path to profilepic.png"
+git push
+
   </body>
 </html>
